# SuGar-Engine

./: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS_AND_SCOPE.md  ROADMAP.md  RULES.md  scene.json
assets/models/: AnimatedSpinner.gltf  SkinnedBar.gltf  SkinnedBend.gltf
assets/ui/: hud.rml
docs/: DESIGN_ANIMATION.md  DESIGN_NAVIGATION.md  DESIGN_RUNTIME_UI.md  DEV_ENVIRONMENT.md  RUNTIME_UI_LESSONS.md
shaders/: basic.frag  basic.vert  rml.frag  rml.vert  shadow.vert  skinned.vert  skinned_shadow.vert
src/: BasicTrianglePass.cpp  BasicTrianglePass.h  Benchmarks.h  GameModuleLoader.cpp  GameModuleLoader.h  RenderPass.h  Renderer.cpp  Renderer.h  SelfTests.h  StressTests.h  SuGarApp.cpp  SuGarApp.h  main.cpp
src/animation/: AnimationClip.cpp  AnimationClip.h  AnimationClipRegistry.cpp  AnimationClipRegistry.h  AnimationComponents.h  AnimationGraph.h  AnimationGraphRegistry.cpp  AnimationGraphRegistry.h  AnimationStateSystem.cpp  AnimationStateSystem.h  AnimationSystem.cpp  AnimationSystem.h  Pose.cpp  Pose.h  Skin.h  SkinRegistry.cpp  SkinRegistry.h  Skinning.cpp  Skinning.h
src/assets/: AssetCooker.cpp  AssetCooker.h  AssetDatabase.cpp  AssetDatabase.h  AssetHandle.h  AssetHash.cpp  AssetHash.h  AssetMeta.cpp  AssetMeta.h  AssetPath.cpp  AssetPath.h  AssetRegistry.cpp  AssetRegistry.h  AssetReimport.cpp  AssetReimport.h  CookedAsset.cpp  CookedAsset.h  FileWatcher.cpp  FileWatcher.h  GltfLoader.cpp  GltfLoader.h  GltfModel.h  ModelImporter.cpp  ModelImporter.h  ModelLoader.cpp  ModelLoader.h  ResourceManager.cpp  ResourceManager.h  stb_image.cpp  tiny_gltf_impl.cpp
src/audio/: AudioClip.h  AudioComponents.h  AudioEngine.cpp  AudioEngine.h  AudioLoader.cpp  AudioLoader.h  AudioSystem.cpp  AudioSystem.h  miniaudio_impl.cpp
src/core/: EngineState.h  Input.cpp  Input.h  InputActions.cpp  InputActions.h  SnapshotStorage.h
src/ecs/: ComponentAccess.cpp  ComponentAccess.h  ComponentStorage.h  Components.h  Entity.h  EntityManager.cpp  EntityManager.h  Registry.h  SystemSchedule.h
src/editor/: EditorCommand.h  EditorCommandSelfTest.h  EditorCommands.h  EntityQuery.h  ViewportOverlay.h
src/game/: GameBehaviors.cpp  GameModule.h
src/navigation/: NavComponents.h  NavMesh.cpp  NavMesh.h  NavMeshBaker.cpp  NavMeshBaker.h  NavMeshBuilder.cpp  NavMeshBuilder.h  NavMeshRegistry.cpp  NavMeshRegistry.h  NavPath.cpp  NavPath.h  NavigationSystem.cpp  NavigationSystem.h
src/physics/: CollisionEvent.h  PhysicsComponents.h  PhysicsWorld.cpp  PhysicsWorld.h
src/rendering/: Camera.h  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  UniformBufferObject.h  Vertex.h
src/scene/: Behavior.h  BehaviorRegistry.cpp  BehaviorRegistry.h  DrawList.cpp  DrawList.h  GameObject.h  Light.h  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Transform.h  TransformMath.h
src/ui/: RmlSystemInterface.cpp  RmlSystemInterface.h  RmlVulkanRenderer.cpp  RmlVulkanRenderer.h  RuntimeUISystem.cpp  RuntimeUISystem.h  RuntimeUIView.cpp  RuntimeUIView.h  UIComponents.h  UIIntent.h
